main/components/components.css
.StackFrameComponent {
	padding-left: var(--width);
}

.TableItem .selected {
	background-color: rgba(102, 153, 255, 0.3);
}

.StackframeSelectedError {
	background-color: rgba(255, 25, 25, 0.25);
}
.StackFrameComponent {
}
.EventLogText .console {
	--text-color: rgba(255, 255, 255, 0.5);
}
.EventLogText .stdout {
	--text-color: rgba(255, 255, 255, 1.0);
}
.EventLogText .stderr {
	--text-color: rgba(255, 50, 50, 1.0);
}

.EventLogComponent .Table {
	padding-left: 5px;
	padding-right: 5px;
}

.DebuggerComponent .Table {
	padding-left: 3px;
	padding-right: 3px;
}

